--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- Main -->
   <main>
-    <form action="" class="form-container">
+    <form action="/pages/home/home.html" class="form-container">
       <div class="form-content">
 
         <!-- Title -->
